# mkdocs-test

./: .gitignore  404.html  Makefile  index.html  mkdocs.yml  project.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
docs/sidearm/: bastion.md  emi-proxy.md  index.md
search/: search_index.json
sidearm/: index.html
sidearm/bastion/: index.html
sidearm/emi-proxy/: index.html
