[tool.poetry]
name = "mkdocs-test"
version = "0.1.0"
description = ""
authors = ["David Kirby <57732284+david-kirby@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
mkdocs = "^1.1.2"
markdown-include = "^0.6.0"
mkdocs-material = "^7.1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
